[Abhishek] Added the CRUD operations functionality

--- a/EmployeePayroll_MVC/appsettings.json
+++ b/EmployeePayroll_MVC/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "ConnectStr": "Data Source=.;Initial Catalog=EmployeePayroll;Integrated Security=True;"}
 }
